missing color fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	color: rgba(255, 255, 255, 0.9);
 	letter-spacing: 0.125em;
+	font-family: 'Poppins', sans-serif;
 }
 
 html,
